# ppl-benchmark

./: benchmark.py  create_plots.py  jax_rng.py  mnist.py  numpyro_vae.py  pyproject.toml  pyro_vae.py  pytorch_mnist.py  record_gpu.py  run_mnist.py  run_rng.py  run_training.py  train.py
ocaml_benchmark/: dune-project
ocaml_benchmark/lib/: dune
ocaml_benchmark/test/: dune
rng/: benchmark.py  create_plots.py  hello.py  pytorch_rng.py  run_all.py
