[project]
name = "ppl-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]>=0.5.0",
    "kitcat>=1.2.1",
    "matplotlib>=3.10.0",
    "mpl-typst",
    "numpyro>=0.16.1",
    "optax>=0.2.4",
    "pyro-ppl>=1.9.1",
    "torchvision>=0.21.0",
]

[tool.uv.sources]
mpl-typst = { git = "https://github.com/daskol/mpl-typst" }

[tool.uv.workspace]
members = []
